--- a/gang.html
+++ b/gang.html
@@ -17,7 +17,7 @@
 
 <script>
 if (!(sessionStorage.getItem("sudopass") === "21forreal")) {
-location.replace("https://gnet27.ml/21");
+location.replace("https://gnet27.ml/21/gang");
 }
      </script>
 
